Changelog
=========


1.10.6 (unreleased)
-------------------

- Nothing changed yet.


1.10.5 (2020-11-25)
-------------------

- Fix harming upgrade step from release 1.10.3, which removed all behaviors. [mathias.leimgruber]


WARNING: Do not upgrade to release 1.10.3, it most likely will break the MemberBlock.


1.10.4 (2020-11-20)
-------------------

- Always return False for getIcon on contacts. [mathias.leimgruber]


1.10.3 (2020-10-02)
-------------------

- Remove obsolete behaviour in Plone 5 [Nachtalb]
- Fix broken contentpage containing a memberblock [Nachtalb]


1.10.2 (2020-08-04)
-------------------

- Fix contenttree dependency in metadata.xml, since it has been removed with version 1.4.0. [mathias.leimgruber]
- Remove obsolete behaviors from Plone 5 profile [Nachtalb]


1.10.1 (2020-02-21)
-------------------

- Strip ldap synced values [Nachtalb]


1.10.0 (2020-02-20)
-------------------

- Support ldap scope attribute for contact sync [Nachtalb]


1.9.6 (2020-02-14)
------------------

- Fix i18n build. [djowett-ftw]
- Fix object_rename error by not trying to set Title field when renaming a Contact. [djowett-ftw]
- Brush up English in README and clarify supported versions of Plone (4.3 and 5.1). [djowett-ftw]

1.9.5 (2020-01-31)
------------------

- Fix removal of spamProtect usage. [mathias.leimgruber]


1.9.4 (2020-01-31)
------------------

- Remove usage of spamProtect script, since it's no longer available in plone 5. [mathias.leimgruber]


1.9.3 (2020-01-09)
------------------

- Add ftw.contacts portal_types translations to plone domain. [tinagerber]


1.9.2 (2019-12-14)
------------------

- Provide precompiled bundle. [tinagerber]


1.9.1 (2019-11-29)
------------------

- Use unittest instead of unittest2. [jone]


1.9.0 (2019-06-12)
------------------

- Add plone 5.1 support [busykoala]


1.8.0 (2019-04-01)
------------------

- Setup security in the in the sync script. [mbaechtold]
