@@ -5,7 +5,10 @@ Changelog
 1.10.6 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Implelment option to configure the encoding of the vcard. [mathias.leimgruber]
+
+- Change the default encoding to Windows-1252 in order to support Outlook by default. [mathias.leimgruber]
+]
 
 
 1.10.5 (2020-11-25)
